# gget

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  index.html  print.html  pyproject.toml  searchindex.js  searchindex.json  setup.cfg
.github/scripts/: translate_docs.py
.github/workflows/: build.yml  ci.yml  deploy.yml  release.yml  traffic.yml  translate_docs.yml
docs/src/: SUMMARY.md
docs/src/en/: 8cube.md  alphafold.md  archs4.md  bgee.md  blast.md  blat.md  cbio.md  cellxgene.md  cite.md  cosmic.md  dependents.md  diamond.md  elm.md  enrichr.md  gpt.md  info.md  introduction.md  muscle.md  mutate.md  opentargets.md  pdb.md  quick_start_guide.md  ref.md  search.md  seq.md  setup.md  updates.md  virus.md
docs/src/es/: alphafold.md  archs4.md  bgee.md  blast.md  blat.md  cbio.md  cellxgene.md  cite.md  contributing.md  cosmic.md  dependents.md  diamond.md  elm.md  enrichr.md  gpt.md  info.md  installation.md  introduction.md  muscle.md  mutate.md  opentargets.md  pdb.md  ref.md  search.md  seq.md  setup.md  updates.md  virus.md
en/: introduction.html  updates.html  virus.html
es/: introduction.html  updates.html  virus.html
gget/: __init__.py  compile.py  constants.py  gget_8cube.py  gget_alphafold.py  gget_archs4.py  gget_bgee.py  gget_blast.py  gget_blat.py  gget_cbio.py  gget_cellxgene.py  gget_cosmic.py  gget_diamond.py  gget_elm.py  gget_enrichr.py  gget_gpt.py  gget_info.py  gget_muscle.py  gget_mutate.py  gget_opentargets.py  gget_pdb.py  gget_ref.py  gget_search.py  gget_seq.py  gget_setup.py  gget_virus.py  main.py  utils.py
tests/: fixtures.py  from_json.py  pytest_results_py3.12.txt  test_8cube.py  test_archs4.py  test_bgee.py  test_blast.py  test_blat.py  test_cbio.py  test_cellxgene.py  test_compile.py  test_cosmic.py  test_diamond.py  test_elm.py  test_enrichr.py  test_gpt.py  test_info.py  test_muscle.py  test_mutate.py  test_opentargets.py  test_pdb.py  test_ref.py  test_search.py  test_seq.py  test_utils.py  test_virus.py
tests/fixtures/: test_blat.json  test_cellxgene.json  test_info.json  test_seq.json
traffic/: clones.csv  views.csv
